Fixed responsiveness, added slider, aligned checkbox.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,7 +4,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 100vh;
+  height: 100%;
   grid-template-columns: minmax(150px, 1fr);
   grid-template-rows: 80px 1fr;
   font-family: "Montserrat", sans-serif;
@@ -30,5 +30,12 @@ h3 {
 
 .container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+  align-items: center;
+}
+
+@media only screen and (max-width: 450px) {
+  App {
+    overflow: scroll;
+  }
 }
