--- a/src/styles/Directions.css
+++ b/src/styles/Directions.css
@@ -7,8 +7,11 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 50px minmax(30vh, 80vh);
+  max-height: 85vh;
 }
 
-.instructions {
-  overflow-y: hidden;
+@media only screen and (min-width: 60vh) {
+  .instructions {
+    overflow-y: scroll;
+  }
 }
